--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,11 @@
 {
-    "manifest_version": 2,
-  
-    "name": "SMN CONAGUA SATELITE",
-    "description": "Esta Extension te permitira ver el clima por medio de imagenes satelitales de mexico",
-    "version": "1.0",
-    "browser_action": {
-     "default_icon": "cloud.png",
-     "default_popup": "popup.html"
-    },
-    "permissions": [
-     "activeTab"
-     ]
-  }
+  "manifest_version": 3,
+  "name": "SMN CONAGUA SATELITE",
+  "description": "Esta Extension te permitira ver el clima por medio de imagenes satelitales de mexico",
+  "version": "1.0",
+  "action": {
+    "default_icon": "cloud.png",
+    "default_popup": "popup.html"
+  },
+  "permissions": ["activeTab", "tabs"]
+}
